projects/07-upgrade-safety-lab/layout-diff/tests/snapshots/golden__real__SubscriptionRegistryV1_to_SubscriptionRegistryBridge.snap
---
source: tests/golden.rs
expression: report.render_text()
---
layout-diff diff: SubscriptionRegistryV1 -> SubscriptionRegistryBridge
  warning  renamed                sequential `_initialized`
           `_initialized` at slot 0 is now called `_legacyInitialized`
  warning  renamed                sequential `_initializing`
           `_initializing` at slot 0 offset 1 is now called `_legacyInitializing`
  warning  renamed                sequential `_owner`
           `_owner` at slot 51 is now called `_legacyOwner`
  info     namespace-added        erc7201:openzeppelin.storage.Initializable `openzeppelin.storage.Initializable`
           new namespace `openzeppelin.storage.Initializable` (struct Initializable.InitializableStorage) at 0xf0c57e16840df040f15088dc2f81fe391c3923bec73e23a9662efc9c229c6a00
  allowed  moved-to-namespace     sequential `_initialized`
           `_initialized` lives at slot 0 in the old layout and in namespace `openzeppelin.storage.Initializable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  allowed  moved-to-namespace     sequential `_initializing`
           `_initializing` lives at slot 0 offset 1 in the old layout and in namespace `openzeppelin.storage.Initializable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  info     namespace-added        erc7201:openzeppelin.storage.Ownable `openzeppelin.storage.Ownable`
           new namespace `openzeppelin.storage.Ownable` (struct OwnableUpgradeable.OwnableStorage) at 0x9016d09d72d40fdae2fd8ceac6b6234c7706214fd39c1cd1e609a0528c199300
  allowed  moved-to-namespace     sequential `_owner`
           `_owner` lives at slot 51 in the old layout and in namespace `openzeppelin.storage.Ownable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  info     namespace-added        erc7201:openzeppelin.storage.Ownable2Step `openzeppelin.storage.Ownable2Step`
           new namespace `openzeppelin.storage.Ownable2Step` (struct Ownable2StepUpgradeable.Ownable2StepStorage) at 0x237e158222e3e6968b72b9db0d8043aacf074ad9f650f0d1606b4d82ee432c00
result: SAFE (0 errors, 3 allowed, 3 warnings, 3 infos)
