projects/07-upgrade-safety-lab/layout-diff/tests/snapshots/golden__real__naive_v1_to_v2.snap
---
source: tests/golden.rs
expression: report.render_text()
---
layout-diff diff: SubscriptionRegistryV1 -> SubscriptionRegistryV2
  warning  renamed                sequential `_initialized`
           `_initialized` at slot 0 is now called `_legacyInitialized`
  warning  renamed                sequential `_initializing`
           `_initializing` at slot 0 offset 1 is now called `_legacyInitializing`
  warning  renamed                sequential `_owner`
           `_owner` at slot 51 is now called `_legacyOwner`
  info     namespace-added        erc7201:openzeppelin.storage.AccessManaged `openzeppelin.storage.AccessManaged`
           new namespace `openzeppelin.storage.AccessManaged` (struct AccessManagedUpgradeable.AccessManagedStorage) at 0xf3177357ab46d8af007ab3fdb9af81da189e1068fefdc0073dca88a2cab40a00
  info     namespace-added        erc7201:openzeppelin.storage.Initializable `openzeppelin.storage.Initializable`
           new namespace `openzeppelin.storage.Initializable` (struct Initializable.InitializableStorage) at 0xf0c57e16840df040f15088dc2f81fe391c3923bec73e23a9662efc9c229c6a00
  error    moved-to-namespace     sequential `_initialized`
           `_initialized` lives at slot 0 in the old layout and in namespace `openzeppelin.storage.Initializable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  error    moved-to-namespace     sequential `_initializing`
           `_initializing` lives at slot 0 offset 1 in the old layout and in namespace `openzeppelin.storage.Initializable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  info     namespace-added        erc7201:openzeppelin.storage.Ownable `openzeppelin.storage.Ownable`
           new namespace `openzeppelin.storage.Ownable` (struct OwnableUpgradeable.OwnableStorage) at 0x9016d09d72d40fdae2fd8ceac6b6234c7706214fd39c1cd1e609a0528c199300
  error    moved-to-namespace     sequential `_owner`
           `_owner` lives at slot 51 in the old layout and in namespace `openzeppelin.storage.Ownable` in the new one; the new code reads the namespace, which starts empty, so the old value is stranded (OpenZeppelin issue #6362). Copy it in a migration step (reinitializer) before switching implementations
  info     namespace-added        erc7201:openzeppelin.storage.Ownable2Step `openzeppelin.storage.Ownable2Step`
           new namespace `openzeppelin.storage.Ownable2Step` (struct Ownable2StepUpgradeable.Ownable2StepStorage) at 0x237e158222e3e6968b72b9db0d8043aacf074ad9f650f0d1606b4d82ee432c00
  info     namespace-added        erc7201:openzeppelin.storage.Pausable `openzeppelin.storage.Pausable`
           new namespace `openzeppelin.storage.Pausable` (struct PausableUpgradeable.PausableStorage) at 0xcd5ed15c6e187e77e9aee88184c21f4f2182ab5827cb3b7e07fbedcd63f03300
  info     namespace-added        erc7201:upgradelab.storage.SubscriptionRegistry `upgradelab.storage.SubscriptionRegistry`
           new namespace `upgradelab.storage.SubscriptionRegistry` (struct RegistryNamespaceV2.RegistryStorage) at 0xb4bb17120a8e44106124fda25af4145500ca9108cc41e1baa7fd32e47222d800
result: UNSAFE (3 errors, 0 allowed, 3 warnings, 6 infos)
